samples/_failures_safe/1761093233_bbbc7a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5fff9dd2.c: In function ‘main’:
./samples/SAFE/__tmp_5fff9dd2.c:137:12: error: expected declaration or statement at end of input
  137 |     struct LogAnalyzer analyzer;
      |            ^~~~~~~~~~~
